# kaggle-calories

./: .gitignore  build_and_update.ps1  pyproject.toml  run_local_ensemble_hill_climber.py  run_local_ensemble_hill_climber_gpu.py  run_local_stacking_ridge.py  run_local_stacking_xgb.py
calories/: constants.py
experiments/: exp10_identify_bad_test_preds_using_correlation.py  exp11_adversarial_validation.py  exp1_single_lgbm.py  exp2_optuna_xgb_from_run_2.py  exp3_decimal_digits.py  exp4_corr_to_target.py  exp5_new_features.py  exp6_feature_store_overview.py  exp7_optuna_catboost_from_64.py  exp7_optuna_catboost_from_64_results.txt  exp8_optuna_catboost_from_64_other_params.py  exp8_optuna_catboost_from_64_other_params_results.txt  exp9_xgboost_distribution.py
feature-dataset-upload/: dataset-metadata.json
feature_creators/: fc10_masked_manual_interaction_features.py  fc1_create_autofe_features.py  fc2_create_te_mean_5_outer_4_inner_folds_no_fillna.py  fc3_create_te_mean_not_folded.py  fc4_create_polynomial_features.py  fc5_create_binning_features.py  fc6_map_original_dataset_targets.py  fc7_map_original_dataset_targets_max.py  fc8_map_original_dataset_targets_min.py  fc9_map_original_dataset_targets_nunique.py  read_features_util.py  read_nested_features_util.py
feature_selection/: fs10_map_original_dataset_targets_max_from_fc7.py  fs10_map_original_dataset_targets_max_from_fc7_results.txt  fs11_map_original_dataset_targets_min_nunique_from_fc8_fc9.py  fs11_map_original_dataset_targets_min_nunique_from_fc8_fc9_results.txt  fs1_xgb_autofe.py  fs4_catboost_autofe.py  (+21 more)
(+73 files in other folders)
