[project]
name = "calories"
version = "0.1.0"
description = ""
authors = [
    {name = "Johannes Heller",email = "stopwhispering314@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scipy (>=1.15.2,<2.0.0)",
    "optuna (>=4.2.1,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "category-encoders (>=2.8.1,<3.0.0)",
    "shap (>=0.47.1,<0.48.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "wandb (>=0.19.8,<0.20.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "kaggle (>=1.7.4.2,<2.0.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "ruff (>=0.11.2,<0.12.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "termcolor (>=3.0.1,<4.0.0)",
    "pip (>=25.0.1,<26.0.0)",
    "feature-engine (>=1.8.3,<2.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "cupy-cuda12x (>=13.4.1,<14.0.0)",
    "xgboost-distribution[gpu] (>=0.4.0,<0.5.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
